public class Axis
{
    public const string HORIZONTAL = "Horizontal";
    public const string VERTICAL = "Vertical";
}

public class AnimationTags
{
    public const string SPEED_FLOAT = "Speed";
    public const string AIRBORNE_BOLEAN = "AirBorne";
    public const string ATTACK_TRIGGER = "Attack";
    public const string DEAD_TRIGGER = "Dead";
    public const string BEING_HIT_TRIGGER = "BeingHit";

    //Player
    public const string PLAYER_ATTACK_01 = "LittleAdventurerAndie_ATTACK_01";
    public const string PLAYER_ATTACK_02 = "LittleAdventurerAndie_ATTACK_02";
    public const string PLAYER_ATTACK_03 = "LittleAdventurerAndie_ATTACK_03";
}

public class Tags
{
    public const string PLAYER = "Player";
}
